k8s/local/tracing-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-node
  labels:
    app: tracing-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tracing-node
  template:
    metadata:
      labels:
        app: tracing-node
    spec:
      containers:
      - name: tracing-node
        image: lab/tracing-node:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-node
spec:
  selector:
    app: tracing-node
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
